# 3D-Feat-Desc

./: README.md
RefSignatures/: .gitignore
clouds/: .gitignore
clouds/Face/: .gitignore
clouds/Mathieu/: .gitignore
clouds/Mathieu2/: .gitignore
clouds/Objects/: .gitignore
src/: CMakeLists.txt  defines.h  defines.h~  main.cpp
src/KinectSearch/: KinectSearch.cpp  KinectSearch.h
src/Match/: Match.cpp  Match.h
src/PCA/: PCA.cpp  PCA.h
src/Search/: Search.cpp  Search.h
src/Signature/: Signature.cpp  Signature.h
src/SplitSpace/: SplitSpace.cpp  SplitSpace.h
src/common/: common.cpp  common.h  common2_0.cpp  common2_0.h
